--- a/webApp/index.html
+++ b/webApp/index.html
@@ -3,43 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
     <title>Sophia</title>
+    <link rel="stylesheet" href="indexStyles.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <header>
-        <input type="text" id="header_search-bar" name ="search_bar" placeholder="Search Tapes" ></input>
+        
     </header>
     <main>
-        <div class="main_stopwatch">
-            <p id="stopwatch">00:00:00</p>
-        </div>
-        <div class="main_micro-tape"></div>
-        <div class="main_free-storage">
-            <p>Free storage: 000.00gb</p>
-        </div>
-        <div class="main_day-feature">
-            <div class="main_day-feature-container" >
-                <p id="currentDay">00/00/00</p>
-            </div>
-            <div class="main_day-feature-container" >
-                <p id="currentTime">00:00pm</p>
-            </div>
-        </div>
-        <div class="main_audio-waveform"></div>
-        <div class="main_start-recording">
-            <div class="main_recording-button" id="main_recording-exclude">exclude</div>
-            <div class="main_recording-button" id="main_recording-toggle">start</div>
-            <div class="main_recording-button" id="main_recording-confirm">confirm</div>
-        </div>
+        
     </main>
     <footer>
-        <div class="footer_buttons">Record</div>
-        <div class="footer_buttons">Config</div>
-        <div class="footer_buttons">Tapes</div>
+        <div class="footer-buttons">
+            <div></div>
+            <p>Recorder</p>
+        </div>
+        <div class="footer-buttons">
+            <div></div>
+            <p>Config</p>
+        </div>
+        <div class="footer-buttons">
+            <div></div>
+            <p>Tapes</p>
+        </div>
     </footer>
-
-    <script type="module" src="script.js"></script>
-
 </body>
 </html>
