--- a/webApp/index.html
+++ b/webApp/index.html
@@ -12,7 +12,30 @@
         
     </header>
     <main>
-        
+        <div>
+            tapeHolder
+            <div>
+                tape
+            </div>
+        </div>
+        <div>whiteBar</div>
+        <div class="tape-controls">
+            <button class="tape-button">Save</button>
+            <button class="tape-button">Start</button>
+            <button class="tape-button">Discard</button>
+            <button class="tape-button">Date</button>
+            <button class="tape-button">Time</button>
+            <button class="tape-button">Climate</button>
+        </div>
+        <div>Waveform</div>
+        <div>
+            <div>Stopwatch</div>
+            <div>Freespace</div>
+        </div>
+        <div>
+            box
+        </div>
+
     </main>
     <footer>
         <div class="footer-buttons">
